# multi-transport-autonomous-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
agent/: __init__.py  agent.py  cloudauth.py  config.py  gateway.py  memory.py  security.py  session.py  tools.py
agent/tools_registry/: __init__.py  forum.py  jira_ops.py  kb_query.py  registry.py  vision.py
infrastructure/: package.json  tsconfig.json
infrastructure/lib/: app.ts  slack-event-construct.ts  web-acl.ts
transports/agui/: __init__.py  agent_adapter.py  app.py  client_proxy_tool.py  config.py
transports/api/: __init__.py  handler.py
transports/mcp/: package.json  tsconfig.json
transports/mcp/src/: server.ts  types.ts  utils.ts
transports/mcp/src/tools/: agent-invoke.ts  file-upload.ts  log-analyzer.ts  search.ts
transports/slack/: __init__.py  config.py  handler.py  runtime_client.py  session_store.py  slack_client.py
